--- a/huddle/index.html
+++ b/huddle/index.html
@@ -27,6 +27,10 @@
           You have <br> a voice, but so does your audience. 
           Create connections with <br> your users as you engage in genuine discussion.
         </p>
+        <article>
+          <h2>Titre2</h2>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae a tempore et fugit atque nulla veritatis rem! Qui delectus hic laborum temporibus corrupti magnam expedita cupiditate nam, laudantium facilis quasi!</p>
+        </article>
         <button class="button">Register</button>    
       </div>
     
