--- a/huddle/index.html
+++ b/huddle/index.html
@@ -22,14 +22,10 @@
           <img src="images/illustration-mockups.svg" alt="">
       </div>
       <div class="text">
-        <h1>Build The Community <br> Your Fans Will Love</h1>
-        <p>Huddle re-imagines the way we build communities. 
-          You have <br> a voice, but so does your audience. 
-          Create connections with <br> your users as you engage in genuine discussion.
-        </p>
+        <h1>Salam inés <br> </h1>
+        <p>Je t'ai pas appelé hier psk j'avais mal a la téte <br> coucou les nazes <br> 
         <article>
-          <h2>Titre2</h2>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae a tempore et fugit atque nulla veritatis rem! Qui delectus hic laborum temporibus corrupti magnam expedita cupiditate nam, laudantium facilis quasi!</p>
+         
         </article>
         <button class="button">Register</button>    
       </div>
